--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "sqlite3": "^5.1.6",
     "body-parser": "^1.20.2"
   },
-  "devDependencies": {
-    "nodemon": "^3.0.1"
+  "engines": {
+    "node": ">=16.0.0"
   }
 }
