--- a/package.json
+++ b/package.json
@@ -6,13 +6,20 @@
   "scripts": {
     "start": "node server.js",
     "dev": "nodemon server.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "import": "node import-data.js",
+    "download-test": "node download-csv.js"
   },
   "dependencies": {
     "cors": "^2.8.5",
     "express": "^4.18.2",
     "sqlite3": "^5.1.6",
-    "body-parser": "^1.20.2"
+    "body-parser": "^1.20.2",
+    "csv-parser": "^3.0.0",
+    "node-fetch": "^2.6.7"
+  },
+  "devDependencies": {
+    "nodemon": "^3.0.1"
   },
   "engines": {
     "node": ">=16.0.0"
