--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "sqlite3": "^5.1.6",
     "body-parser": "^1.20.2",
     "csv-parser": "^3.0.0",
-    "node-fetch": "^2.6.7"
+    "node-fetch": "^2.6.7",
+    "exceljs": "^4.4.0"
   },
   "devDependencies": {
     "nodemon": "^3.0.1"
